# GPU-Accelerated-Ray-Tracer

./: CMakeLists.txt  README.md  defines.cuh  main.cu  make.bat  tracer.cu  tracer.cuh
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb_image/: CMakeLists.txt
src/: app.cc  app.cu  app.cuh  app.h  camera.cuh  defines.cuh  hitable.cuh  hitable_list.cuh  main.cc  main.cu  material.cuh  ray.cuh  sphere.cuh  tracer.cu  tracer.cuh  vec3.cuh
src/UI/: UI.cc  UI.cu  UI.h
src/engine/: Shader.cc  Shader.cu  Shader.h
src/shaders/: frag.glsl
